# sparse-computation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_local.sh  run_local_spmm_large_b_col.sh  run_local_spmm_small_b_col.sh
aggregation/: .gitignore
aggregation/include/aggregation/: exceptions.h
benchmark/: .gitignore
codeGen/: main_spmm.py  main_spmm_small_b_col.py  main_spmv.py
codeGen/spmm/: spmm_format_code_generator.py
codeGen/ss_format/: format_generator.py
code_gen/: main_time_analysis.py
code_gen/pattern_utiles/: pattern_dictionary.py
code_gen/spmm/: spmm_dense_code_generator.py  spmm_time_analysis.py
code_gen/spmm_small_b_col/: spmm_small_b_col_format_code_generator.py
code_gen/spmv/: spmv_format_code_generator.py
code_gen/ss_format/: format_generator.py  read_compressed_format.py
example_cuda/: CMakeLists.txt  spmm_demo_gpu.cu  spmm_demo_gpu_utils.h  spmm_small_b_col_demo_gpu.cu  spmm_small_b_col_demo_gpu_utils.h  spmv_demo_gpu.cu  spmv_demo_gpu_utils.h
include/: InputParser.h  Logger.h  Sparse_io.h  test_utils.h
include/compressed_format/: CompressedFormat.h
matrices/: body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-1-2.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-1-3.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-1-4.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-1-5.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-1-6.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-1-7.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-1-8.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-2-1.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-2-2.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-2-3.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-2-4.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-2-5.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-2-6.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-2-7.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-2-8.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-3-1.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-3-2.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-3-3.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-3-4.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-3-5.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-3-6.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-3-7.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-3-8.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-4-2.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-4-3.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-4-4.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-4-5.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-4-6.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-4-7.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-4-8.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-5-1.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-5-2.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-5-3.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-5-4.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-5-5.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-5-6.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-5-7.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-5-8.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-6-1.cfmtx  body_decoder_layer_1_encdec_attention_multihead_attention_k_fully_connected-6-2.cfmtx  (+7 more)
src/: InputParser.cpp  test_utils.cpp
utils/: Sparse_io.cpp
